# petlove-case-flask

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  env.template  pyproject.toml  settings.conf
.doc_test/: Lojas Petlove.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: test.yml
.prometheus/: config.yml
src/: __init__.py  config.py
src/clients/: genai.py
src/controllers/: __init__.py  health_controller.py  question_controller.py
src/models/: question.py
src/services/: question_service.py
src/utils/: consts.py  file.py
tests/: conftest.py
tests/clients/: test_genai.py
tests/controllers/: test_health_resources.py  test_question_resources.py
tests/models/: test_question.py
tests/services/: test_question_service.py
